tests/c_headers/net_ip.h


enum net_ip_protocol {
	IPPROTO_IP = 0,            
	IPPROTO_ICMP = 1,          
	IPPROTO_IGMP = 2,          
	IPPROTO_IPIP = 4,          
	IPPROTO_TCP = 6,           
	IPPROTO_UDP = 17,          
	IPPROTO_IPV6 = 41,         
	IPPROTO_ICMPV6 = 58,       
	IPPROTO_RAW = 255,         
};
struct in6_addr {
	union {
		uint8_t s6_addr[16];
		uint16_t s6_addr16[8]; 
		uint32_t s6_addr32[4]; 
	};
};
struct in_addr {
	union {
		uint8_t s4_addr[4];
		uint16_t s4_addr16[2]; 
		uint32_t s4_addr32[1]; 
		uint32_t s_addr; 
	};
};
struct net_addr {
	sa_family_t family;
	union {
		struct in6_addr in6_addr;
		struct in_addr in_addr;
	};
};
#define IN6ADDR_ANY_INIT { { { 0, 0, 0, 0, 0, 0, 0, 0, 0, \
				0, 0, 0, 0, 0, 0, 0 } } } {.importc: "$1", hrd: hdr.}
extern const struct in6_addr in6addr_any;
extern const struct in6_addr in6addr_loopback;
#define INET_ADDRSTRLEN 16
#define INET6_ADDRSTRLEN 46
#define NET_IPV6_ADDR_LEN sizeof("xxxx:xxxx:xxxx:xxxx:xxxx:xxxx:xxxx:xxxx")
enum net_ip_mtu {
	NET_IPV6_MTU = 1280,
	NET_IPV4_MTU = 576,
};
enum net_priority {
	NET_PRIORITY_BK = 1, 
	NET_PRIORITY_BE = 0, 
	NET_PRIORITY_EE = 2, 
	NET_PRIORITY_CA = 3, 
	NET_PRIORITY_VI = 4, 
	NET_PRIORITY_VO = 5, 
	NET_PRIORITY_IC = 6, 
	NET_PRIORITY_NC = 7  
};
#define NET_MAX_PRIORITIES 8 
struct net_tuple {
	struct net_addr *remote_addr;  
	struct net_addr *local_addr;   
	uint16_t remote_port;          
	uint16_t local_port;           
	enum net_ip_protocol ip_proto; 
};
enum net_addr_state {
	NET_ADDR_ANY_STATE = -1, 
	NET_ADDR_TENTATIVE = 0,  
	NET_ADDR_PREFERRED,      
	NET_ADDR_DEPRECATED,     
};
enum net_addr_type {
	NET_ADDR_ANY = 0,
	NET_ADDR_AUTOCONF,
	NET_ADDR_DHCP,
	NET_ADDR_MANUAL,
	NET_ADDR_OVERRIDABLE,
};
struct net_ipv6_hdr {
	uint8_t vtc;
	uint8_t tcflow;
	uint16_t flow;
	uint16_t len;
	uint8_t nexthdr;
	uint8_t hop_limit;
	struct in6_addr src;
	struct in6_addr dst;
} __packed;
struct net_ipv6_frag_hdr {
	uint8_t nexthdr;
	uint8_t reserved;
	uint16_t offset;
	uint32_t id;
} __packed;
struct net_ipv4_hdr {
	uint8_t vhl;
	uint8_t tos;
	uint16_t len;
	uint8_t id[2];
	uint8_t offset[2];
	uint8_t ttl;
	uint8_t proto;
	uint16_t chksum;
	struct in_addr src;
	struct in_addr dst;
} __packed;
struct net_icmp_hdr {
	uint8_t type;
	uint8_t code;
	uint16_t chksum;
} __packed;
struct net_udp_hdr {
	uint16_t src_port;
	uint16_t dst_port;
	uint16_t len;
	uint16_t chksum;
} __packed;
struct net_tcp_hdr {
	uint16_t src_port;
	uint16_t dst_port;
	uint8_t seq[4];
	uint8_t ack[4];
	uint8_t offset;
	uint8_t flags;
	uint8_t wnd[2];
	uint16_t chksum;
	uint8_t urg[2];
	uint8_t optdata[0];
} __packed;
 const char *net_addr_type2str(enum net_addr_type type)
{
	switch (type) {
	case NET_ADDR_AUTOCONF:
		return "AUTO";
	case NET_ADDR_DHCP:
		return "DHCP";
	case NET_ADDR_MANUAL:
		return "MANUAL";
	case NET_ADDR_OVERRIDABLE:
		return "OVERRIDE";
	case NET_ADDR_ANY:
	default:
		break;
	}
	return "<unknown>";
}
#define NET_IPV6_NEXTHDR_HBHO        0
union net_ip_header {
	struct net_ipv4_hdr *ipv4;
	struct net_ipv6_hdr *ipv6;
};
union net_proto_header {
	struct net_udp_hdr *udp;
	struct net_tcp_hdr *tcp;
};
#define NET_UDPH_LEN	8			
 bool net_ipv6_is_addr_loopback(struct in6_addr *addr)
{
	return UNALIGNED_GET(&addr->s6_addr32[0]) == 0 &&
		UNALIGNED_GET(&addr->s6_addr32[1]) == 0 &&
		UNALIGNED_GET(&addr->s6_addr32[2]) == 0 &&
		ntohl(UNALIGNED_GET(&addr->s6_addr32[3])) == 1;
}
 bool net_ipv6_is_addr_mcast(const struct in6_addr *addr)
{
	return addr->s6_addr[0] == 0xFF;
}
struct net_if;
extern struct net_if_addr *net_if_ipv6_addr_lookup(const struct in6_addr *addr,
						   struct net_if **iface);
 bool net_ipv6_is_my_addr(struct in6_addr *addr)
{
	return net_if_ipv6_addr_lookup(addr, NULL) != NULL;
}
extern struct net_if_mcast_addr *net_if_ipv6_maddr_lookup(
	const struct in6_addr *addr, struct net_if **iface);
 bool net_ipv6_is_my_maddr(struct in6_addr *maddr)
{
	return net_if_ipv6_maddr_lookup(maddr, NULL) != NULL;
}
 bool net_ipv6_is_prefix(const uint8_t *addr1,
				      const uint8_t *addr2,
				      uint8_t length)
{
	uint8_t bits = 128 - length;
	uint8_t bytes = length / 8U;
	uint8_t remain = bits % 8;
	uint8_t mask;
	if (length > 128) {
		return false;
	}
	if (memcmp(addr1, addr2, bytes)) {
		return false;
	}
	if (!remain) {
		return true;
	}
	mask = ((0xff << (8 - remain)) ^ 0xff) << remain;
	return (addr1[bytes] & mask) == (addr2[bytes] & mask);
}
 bool net_ipv4_is_addr_loopback(struct in_addr *addr)
{
	return addr->s4_addr[0] == 127U;
}
 bool net_ipv4_is_addr_unspecified(const struct in_addr *addr)
{
	return UNALIGNED_GET(&addr->s_addr) == 0;
}
 bool net_ipv4_is_addr_mcast(const struct in_addr *addr)
{
	return (ntohl(UNALIGNED_GET(&addr->s_addr)) & 0xF0000000) == 0xE0000000;
}
 bool net_ipv4_is_ll_addr(const struct in_addr *addr)
{
	return (ntohl(UNALIGNED_GET(&addr->s_addr)) & 0xA9FE0000) == 0xA9FE0000;
}
#define net_ipaddr_copy(dest, src) \
	UNALIGNED_PUT(UNALIGNED_GET(src), dest)
 bool net_ipv4_addr_cmp(const struct in_addr *addr1,
				     const struct in_addr *addr2)
{
	return UNALIGNED_GET(&addr1->s_addr) == UNALIGNED_GET(&addr2->s_addr);
}
 bool net_ipv6_addr_cmp(const struct in6_addr *addr1,
				     const struct in6_addr *addr2)
{
	return !memcmp(addr1, addr2, sizeof(struct in6_addr));
}
 bool net_ipv6_is_ll_addr(const struct in6_addr *addr)
{
	return UNALIGNED_GET(&addr->s6_addr16[0]) == htons(0xFE80);
}
 bool net_ipv6_is_ula_addr(const struct in6_addr *addr)
{
	return addr->s6_addr[0] == 0xFD;
}
const struct in6_addr *net_ipv6_unspecified_address(void);
const struct in_addr *net_ipv4_unspecified_address(void);
const struct in_addr *net_ipv4_broadcast_address(void);
struct net_if;
extern bool net_if_ipv4_addr_mask_cmp(struct net_if *iface,
				      const struct in_addr *addr);
 bool net_ipv4_addr_mask_cmp(struct net_if *iface,
					  const struct in_addr *addr)
{
	return net_if_ipv4_addr_mask_cmp(iface, addr);
}
 enum net_priority net_vlan2priority(uint8_t priority)
{
	 const uint8_t vlan2priority[] = {
		NET_PRIORITY_BE,
		NET_PRIORITY_BK,
		NET_PRIORITY_EE,
		NET_PRIORITY_CA,
		NET_PRIORITY_VI,
		NET_PRIORITY_VO,
		NET_PRIORITY_IC,
		NET_PRIORITY_NC
	};
	if (priority >= ARRAY_SIZE(vlan2priority)) {
		return NET_PRIORITY_BE;
	}
	return (enum net_priority)vlan2priority[priority];
}