src/zephyr_c/net/znet_ip.nim


var IN6ADDR_ANY_INIT* {.importc: "IN6ADDR_ANY_INIT", header: hdr.}: int
let in6addr_any* {.importc: "in6addr_any", header: hdr.}: In6Addr

let in6addr_loopback* {.importc: "in6addr_loopback", header: hdr.}: In6Addr

## * @endcond
## * Max length of the IPv4 address as a string. Defined by POSIX.

var INET_ADDRSTRLEN* {.importc: "INET_ADDRSTRLEN", header: hdr.}: int
## * Max length of the IPv6 address as a string. Takes into account possible
##  mapped IPv4 addresses.
##

var INET6_ADDRSTRLEN* {.importc: "INET6_ADDRSTRLEN", header: hdr.}: int
## * @cond INTERNAL_HIDDEN
##  These are for internal usage of the stack

var NET_IPV6_ADDR_LEN* {.importc: "NET_IPV6_ADDR_LEN", header: hdr.}: int
## * @endcond

]#

import posix

type

  NetAddr* {.importc: "NetAddr", header: hdr, bycopy, incompleteStruct.} = object
    family* {.importc: "family".}: TSa_Family
    ## the C code uses an anonymous union 
    In6Addr* {.importc: "In6Addr".}: In6Addr
    InAddr* {.importc: "InAddr".}: InAddr


type
  net_ip_mtu* {.size: sizeof(cint).} = enum
    NET_IPV4_MTU = 576, ## *\
      ## IPv6 MTU length. We must be able to receive this size IPv6 packet
      ##  without fragmentation.
      ##
    NET_IPV6_MTU = 1280 ## *\
      ## IPv4 MTU length. We must be able to receive this size IPv4 packet
      ##  without fragmentation.
      ##


type
  net_priority* {.size: sizeof(uint8).} = enum
    ## * Network packet priority settings described in IEEE 802.1Q Annex I.1
    NET_PRIORITY_BE = 0,        ## *< Best effort (default)
    NET_PRIORITY_BK = 1,        ## *< Background (lowest)
    NET_PRIORITY_EE = 2,        ## *< Excellent effort
    NET_PRIORITY_CA = 3,        ## *< Critical applications (highest)
    NET_PRIORITY_VI = 4,        ## *< Video, < 100 ms latency and jitter
    NET_PRIORITY_VO = 5,        ## *< Voice, < 10 ms latency and jitter
    NET_PRIORITY_IC = 6,        ## *< Internetwork control
    NET_PRIORITY_NC = 7         ## *< Network control


var NET_MAX_PRIORITIES* {.importc: "NET_MAX_PRIORITIES", header: hdr.}: int
## * IPv6/IPv4 network connection tuple

type
  net_tuple* {.importc: "net_tuple", header: hdr, bycopy.} = object
    remote_addr* {.importc: "remote_addr".}: ptr NetAddr ## *< IPv6/IPv4 remote address
    local_addr* {.importc: "local_addr".}: ptr NetAddr ## *< IPv6/IPv4 local address
    remote_port* {.importc: "remote_port".}: uint16 ## *< UDP/TCP remote port
    local_port* {.importc: "local_port".}: uint16 ## *< UDP/TCP local port
    ip_proto* {.importc: "ip_proto".}: net_ip_protocol ## *< IP protocol



type
  net_addr_state* {.size: sizeof(uint8).} = enum
    ## * What is the current state of the network address
    NET_ADDR_ANY_STATE = -1,    ## *< Default (invalid) address type
    NET_ADDR_TENTATIVE = 0,     ## *< Tentative address
    NET_ADDR_PREFERRED,       ## *< Preferred address
    NET_ADDR_DEPRECATED       ## *< Deprecated address

  net_addr_type* {.size: sizeof(uint8).} = enum ## * Default value. This is not a valid value.
  ## * How the network address is assigned to network interface
    NET_ADDR_ANY = 0,           ## * Auto configured address
    NET_ADDR_AUTOCONF,        ## * Address is from DHCP
    NET_ADDR_DHCP,            ## * Manually set address
    NET_ADDR_MANUAL,          ## * Manually set address which is overridable by DHCP
    NET_ADDR_OVERRIDABLE


## * @cond INTERNAL_HIDDEN

type
  net_ipv6_hdr* {.importc: "net_ipv6_hdr", header: hdr, bycopy, packed.} = object
    vtc* {.importc: "vtc".}: uint8
    tcflow* {.importc: "tcflow".}: uint8
    flow* {.importc: "flow".}: uint16
    len* {.importc: "len".}: uint16
    nexthdr* {.importc: "nexthdr".}: uint8
    hop_limit* {.importc: "hop_limit".}: uint8
    src* {.importc: "src".}: In6Addr
    dst* {.importc: "dst".}: In6Addr

  net_ipv6_frag_hdr* {.importc: "net_ipv6_frag_hdr", header: hdr, bycopy, packed.} = object
    nexthdr* {.importc: "nexthdr".}: uint8
    reserved* {.importc: "reserved".}: uint8
    offset* {.importc: "offset".}: uint16
    id* {.importc: "id".}: uint32

  net_ipv4_hdr* {.importc: "net_ipv4_hdr", header: hdr, bycopy, packed.} = object
    vhl* {.importc: "vhl".}: uint8
    tos* {.importc: "tos".}: uint8
    len* {.importc: "len".}: uint16
    id* {.importc: "id".}: array[2, uint8]
    offset* {.importc: "offset".}: array[2, uint8]
    ttl* {.importc: "ttl".}: uint8
    proto* {.importc: "proto".}: uint8
    chksum* {.importc: "chksum".}: uint16
    src* {.importc: "src".}: InAddr
    dst* {.importc: "dst".}: InAddr

  net_icmp_hdr* {.importc: "net_icmp_hdr", header: hdr, bycopy, packed.} = object
    typ* {.importc: "type".}: uint8
    code* {.importc: "code".}: uint8
    chksum* {.importc: "chksum".}: uint16

  net_udp_hdr* {.importc: "net_udp_hdr", header: hdr, bycopy, packed.} = object
    src_port* {.importc: "src_port".}: uint16
    dst_port* {.importc: "dst_port".}: uint16
    len* {.importc: "len".}: uint16
    chksum* {.importc: "chksum".}: uint16

  net_tcp_hdr* {.importc: "net_tcp_hdr", header: hdr, bycopy, packed.} = object
    src_port* {.importc: "src_port".}: uint16
    dst_port* {.importc: "dst_port".}: uint16
    seq* {.importc: "seq".}: array[4, uint8]
    ack* {.importc: "ack".}: array[4, uint8]
    offset* {.importc: "offset".}: uint8
    flags* {.importc: "flags".}: uint8
    wnd* {.importc: "wnd".}: array[2, uint8]
    chksum* {.importc: "chksum".}: uint16
    urg* {.importc: "urg".}: array[2, uint8]
    optdata* {.importc: "optdata".}: UncheckedArray[uint8]


proc net_addr_type2str*(addrType: net_addr_type): cstring {.importc: "$1", header: hdr.}


##  IPv6 extension headers types

var NET_IPV6_NEXTHDR_HBHO* {.importc: "NET_IPV6_NEXTHDR_HBHO", header: hdr.}: cint
## *
##  This 2 unions are here temporarily, as long as net_context.h will
##  be still public and not part of the core only.
##

type
  net_ip_header* {.importc: "net_ip_header", header: hdr, bycopy, union.} = object
    ipv4* {.importc: "ipv4".}: ptr net_ipv4_hdr
    ipv6* {.importc: "ipv6".}: ptr net_ipv6_hdr

  net_proto_header* {.importc: "net_proto_header", header: hdr, bycopy, union.} = object
    udp* {.importc: "udp".}: ptr net_udp_hdr
    tcp* {.importc: "tcp".}: ptr net_tcp_hdr

var NET_UDPH_LEN* {.importc: "NET_UDPH_LEN", header: hdr.}: cint


## *
##  @brief Check if the IPv6 address is a loopback address (::1).
##
##  @param addr IPv6 address
##
##  @return True if address is a loopback address, False otherwise.
##
proc net_ipv6_is_addr_loopback*(inaddr: ptr In6Addr): bool {.importc: "$1", header: hdr.}


## *
##  @brief Check if the IPv6 address is a multicast address.
##
##  @param addr IPv6 address
##
##  @return True if address is multicast address, False otherwise.
##
proc net_ipv6_is_addr_mcast*(inaddr: ptr In6Addr): bool {.importc: "$1", header: hdr.}

# TODO: FIXME
# proc net_if_ipv6_addr_lookup*(inaddr: ptr In6Addr; iface: ptr ptr net_if): ptr net_if_addr {.
    # importc: "net_if_ipv6_addr_lookup", header: hdr.}


## *
##  @brief Check if IPv6 address is found in one of the network interfaces.
##
##  @param addr IPv6 address
##
##  @return True if address was found, False otherwise.
##
proc net_ipv6_is_my_addr*(inaddr: ptr In6Addr): bool {.importc: "$1", header: hdr.}

# TODO: FIXME
# proc net_if_ipv6_maddr_lookup*(inaddr: ptr In6Addr; iface: ptr ptr net_if): ptr net_if_mcast_addr {.
    # importc: "net_if_ipv6_maddr_lookup", header: hdr.}


## *
##  @brief Check if IPv6 multicast address is found in one of the
##  network interfaces.
##
##  @param maddr Multicast IPv6 address
##
##  @return True if address was found, False otherwise.
##

proc net_ipv6_is_my_maddr*(maddr: ptr In6Addr): bool {.importc: "$1", header: hdr.}

## *
##  @brief Check if two IPv6 addresses are same when compared after prefix mask.
##
##  @param addr1 First IPv6 address.
##  @param addr2 Second IPv6 address.
##  @param length Prefix length (max length is 128).
##
##  @return True if IPv6 prefixes are the same, False otherwise.
##

proc net_ipv6_is_prefix*(addr1: ptr uint8; addr2: ptr uint8; length: uint8): bool {.
    importc: "$1", header: hdr.}

## *
##  @brief Check if the IPv4 address is a loopback address (127.0.0.0/8).
##
##  @param addr IPv4 address
##
##  @return True if address is a loopback address, False otherwise.
##

proc net_ipv4_is_addr_loopback*(inaddr: ptr InAddr): bool {.importc: "$1", header: hdr.}

## *
##   @brief Check if the IPv4 address is unspecified (all bits zero)
##
##   @param addr IPv4 address.
##
##   @return True if the address is unspecified, false otherwise.
##

proc net_ipv4_is_addr_unspecified*(inaddr: ptr InAddr): bool {.importc: "$1", header: hdr.}

## *
##  @brief Check if the IPv4 address is a multicast address.
##
##  @param addr IPv4 address
##
##  @return True if address is multicast address, False otherwise.
##

proc net_ipv4_is_addr_mcast*(inaddr: ptr InAddr): bool {.importc: "$1", header: hdr.}

## *
##  @brief Check if the given IPv4 address is a link local address.
##
##  @param addr A valid pointer on an IPv4 address
##
##  @return True if it is, false otherwise.
##

proc net_ipv4_is_ll_addr*(inaddr: ptr InAddr): bool {.importc: "$1", header: hdr.}

## *
##   @def net_ipaddr_copy
##   @brief Copy an IPv4 or IPv6 address
##
##   @param dest Destination IP address.
##   @param src Source IP address.
##
##   @return Destination address.
##

proc net_ipaddr_copy*(dest: ptr InAddr; src: ptr InAddr) {.importc: "net_ipaddr_copy", header: hdr.}
proc net_ipaddr_copy*(dest: ptr In6Addr; src: ptr In6Addr) {.importc: "net_ipaddr_copy", header: hdr.}

## *
##   @brief Compare two IPv4 addresses
##
##   @param addr1 Pointer to IPv4 address.
##   @param addr2 Pointer to IPv4 address.
##
##   @return True if the addresses are the same, false otherwise.
##

proc net_ipv4_addr_cmp*(addr1: ptr InAddr; addr2: ptr InAddr): bool {.importc: "$1", header: hdr.}


## *
##   @brief Compare two IPv6 addresses
##
##   @param addr1 Pointer to IPv6 address.
##   @param addr2 Pointer to IPv6 address.
##
##   @return True if the addresses are the same, false otherwise.
##

proc net_ipv6_addr_cmp*(addr1: ptr In6Addr; addr2: ptr In6Addr): bool {.importc: "$1", header: hdr.}

## *
##  @brief Check if the given IPv6 address is a link local address.
##
##  @param addr A valid pointer on an IPv6 address
##
##  @return True if it is, false otherwise.
##

proc net_ipv6_is_ll_addr*(inaddr: ptr In6Addr): bool {.importc: "$1", header: hdr.}

## *
##  @brief Check if the given IPv6 address is a unique local address.
##
##  @param addr A valid pointer on an IPv6 address
##
##  @return True if it is, false otherwise.
##

proc net_ipv6_is_ula_addr*(inaddr: ptr In6Addr): bool {.importc: "$1", header: hdr.}

## *
##  @brief Return pointer to any (all bits zeros) IPv6 address.
##
##  @return Any IPv6 address.
##

proc net_ipv6_unspecified_address*(): ptr In6Addr {.
    importc: "net_ipv6_unspecified_address", header: hdr.}

## *
##  @brief Return pointer to any (all bits zeros) IPv4 address.
##
##  @return Any IPv4 address.
##

proc net_ipv4_unspecified_address*(): ptr InAddr {.
    importc: "net_ipv4_unspecified_address", header: hdr.}

## *
##  @brief Return pointer to broadcast (all bits ones) IPv4 address.
##
##  @return Broadcast IPv4 address.
##

proc net_ipv4_broadcast_address*(): ptr InAddr {.
    importc: "net_ipv4_broadcast_address", header: hdr.}

# TODO: FIXME
# proc net_if_ipv4_addr_mask_cmp*(iface: ptr net_if; inaddr: ptr InAddr): bool {.
    # importc: "net_if_ipv4_addr_mask_cmp", header: hdr.}

## *
##  @brief Check if the given address belongs to same subnet that
##  has been configured for the interface.
##
##  @param iface A valid pointer on an interface
##  @param addr IPv4 address
##
##  @return True if address is in same subnet, false otherwise.
##

# TODO: FIXME
# proc net_ipv4_addr_mask_cmp*(iface: ptr net_if; inaddr: ptr InAddr): bool =
  # return net_if_ipv4_addr_mask_cmp(iface, `addr`)
